[package]
name = "scheme_lib"
version = "0.2.0"
authors = ["Benedikt Mandelkow <benedikt.mandelkow@rwth-aachen.de>"]
edition = "2018"
publish = false

[dependencies]
itertools = "*"

[dev-dependencies]
criterion = { version = "0.3", default-features = false }

[[bench]]
name = "bench"
harness = false
